--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,11 @@ name: Python CICD
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
 
 jobs:
-  run_tests:
+  run-tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -25,3 +25,24 @@ jobs:
 
       - name: Run tests with coverage
         run: pytest --cov=. --cov-report=term --cov-report=xml
+
+      - name: Prepare the webpage
+        run: |
+          mkdir sites
+          mv htmlcov sites/
+          mv coverage.xml sites/
+
+      - name: upload the artifacts
+        uses: actions/upload-pages-artifact@v4
+        with:
+          path: ./sites
+
+  Deploy:
+    needs: run-tests
+    runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
+    steps:
+      - name: deploy the artifacts
+        uses: actions/deploy-pages@v4
