--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         run: pytest --cov=. --cov-report=term --cov-report=xml
 
       - name: Prepare the webpage
-        run: |
+          run: |
           mkdir sites
           mv htmlcov sites/
           mv coverage.xml sites/
@@ -46,3 +46,13 @@ jobs:
     steps:
       - name: deploy the artifacts
         uses: actions/deploy-pages@v4
+    
+        run: |
+          mkdir sites
+          mv htmlcov sites/
+          mv coverage.xml sites/
+
+      - name: upload the artifacts
+        uses: actions/upload-pages-artifact@v4
+        with:
+          path: ./sites
