--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Python CICD
 
 on:
   push:
-    branches: [ main ]
+    branches: [ development ]
   pull_request:
 
 jobs:
@@ -37,22 +37,22 @@ jobs:
         with:
           path: ./sites
 
-  Deploy:
-    needs: run-tests
-    runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
-    steps:
-      - name: deploy the artifacts
-        uses: actions/deploy-pages@v4
+  # Deploy:
+  #   needs: run-tests
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     pages: write
+  #     id-token: write
+  #   steps:
+  #     - name: deploy the artifacts
+  #       uses: actions/deploy-pages@v4
     
-        run: |
-          mkdir sites
-          mv htmlcov sites/
-          mv coverage.xml sites/
+  #       run: |
+  #         mkdir sites
+  #         mv htmlcov sites/
+  #         mv coverage.xml sites/
 
-      - name: upload the artifacts
-        uses: actions/upload-pages-artifact@v4
-        with:
-          path: ./sites
+  #     - name: upload the artifacts
+  #       uses: actions/upload-pages-artifact@v4
+  #       with:
+  #         path: ./sites
