--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -35,4 +35,5 @@ jobs:
       - name: upload the artifacts
         uses: actions/upload-pages-artifact@v4
         with:
-          path: ./sites
+          name: coverage-report
+          path: site
