--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -24,7 +24,7 @@ jobs:
         run: pytest
 
       - name: Run tests with coverage
-        run: pytest --cov=. --cov-report=term --cov-report=xml
+        run: pytest --cov=. --cov-report=term --cov-report=xml --cov-report=html
 
       - name: Prepare the webpage
         run: |
